CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Punisher)

ADD_SUBDIRECTORY(externals/Library "${CMAKE_CURRENT_BINARY_DIR}/Library")
ADD_SUBDIRECTORY(src)

INCLUDE_DIRECTORIES(${Library_SOURCE_DIR}/Network/include)
INCLUDE_DIRECTORIES(${Library_SOURCE_DIR}/Logging/include)
INCLUDE_DIRECTORIES(${Library_SOURCE_DIR}/Event/include)
INCLUDE_DIRECTORIES(${Library_SOURCE_DIR}/M/include)
INCLUDE_DIRECTORIES(${Punisher_SOURCE_DIR}/include)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	INCLUDE_DIRECTORIES(/opt/local/include)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

INCLUDE(${Punisher_SOURCE_DIR}/src/SourceFiles.txt)
ADD_EXECUTABLE(Punisher ${Punisher_SRC})
TARGET_LINK_LIBRARIES(Punisher Library yaml pthread rt ssl)
